# pdf-desensitizer

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pdf_desensitize.py  pyproject.toml
.github/workflows/: tests.yml
example/: manual_words_example.txt
scripts/: create_demo_pdf.py
src/pdf_desensitizer/: __init__.py  cli.py  detector.py  redactor.py  reports.py
tests/: test_create_demo_pdf.py  test_detector.py  test_redactor.py
